--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
       document.getElementById('main-content').style.display = 'none';
       document.getElementById('auth-screen').style.display = 'flex';
     }
+
+    // Blocca tasto destro e alcuni tasti speciali
+    document.addEventListener('contextmenu', event => event.preventDefault());
+
+    document.addEventListener('keydown', function (event) {
+      if (
+        event.key === 'F12' ||
+        (event.ctrlKey && event.shiftKey && (event.key === 'I' || event.key === 'J')) ||
+        (event.ctrlKey && event.key === 'U')
+      ) {
+        event.preventDefault();
+      }
+    });
   </script>
 </body>
 </html>
